Fix testimonial carousel extra item margin. Fix cart page title breaks into two page.

--- a/assets/scss/frontend.scss
+++ b/assets/scss/frontend.scss
@@ -70,6 +70,12 @@
 		height: 100%;
 	}
 
+	.mdl-card__supporting-text {
+		width: 100%;
+		padding: 1rem;
+		overflow: hidden;
+	}
+
 	.mdl-card__actions {
 		border-top: none;
 		display: flex;
